Adds full Core test coverage. - Adds full test coverage for the /core project.   - Updates & adds dependencies to POM files. - Cleans up repository & adds doc comments.